--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
 		"@sveltejs/kit": "next",
 		"svelte": "^3.44.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@mapbox/node-pre-gyp": "^1.0.9"
+	}
 }
